syntax = "proto3";

package index.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "indexer/gen/index/v1;index";

service IndexService {
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc PublishBatch(PublishBatchRequest) returns (PublishBatchResponse);
}

message PublishRequest { ChangeEvent event = 1; }

message PublishResponse {}

message PublishBatchRequest { repeated ChangeEvent events = 1; }

message PublishBatchResponse {}

message ChangeEvent {
  google.protobuf.Timestamp occurred_at = 1;

  oneof payload {
    CreatePayload create_payload = 2;
    UpdatePayload update_payload = 3;
    DeletePayload delete_payload = 4;
    AddRelationPayload add_relation_payload = 5;
    RemoveRelationPayload remove_relation_payload = 6;
    SetRelationsPayload set_relations_payload = 7;
  }
}

message CreatePayload {
  Resource Resource = 1;
  google.protobuf.Struct data = 2;
  repeated Relation relations = 3;
}

message UpdatePayload {
  Resource Resource = 1;
  google.protobuf.Struct data = 2;
}

message DeletePayload { Resource Resource = 1; }

message AddRelationPayload {
  Resource Resource = 1;
  Relation relation = 2;
}

message RemoveRelationPayload {
  Resource Resource = 1;
  Relation relation = 2;
}

message SetRelationsPayload {
  Resource Resource = 1;
  repeated Relation Relation = 2;
}

message Relation { Resource resource = 1; }

message Resource {
  string type = 1;
  string id = 2;
}
